--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="desc">
                     I work on
-                    <span class="typer" id="main" data-words="too many projects,minecraft plugins,websites,backend development,frontend development" data-colors="#cd2032,#ad3960,#8e518d,#6e6abb" data-delay="50" data-deleteDelay="1000"></span><span class="cursor" data-owner="main" data-cursor-display="|"></span>
+                    <span class="typer" id="main" data-words="too many projects,minecraft plugins,websites,backend development,frontend development" data-colors="#0b79d7" data-delay="50" data-deleteDelay="1000"></span><span class="cursor" data-owner="main" data-cursor-display="|"></span>
                     <script
                         async
                         src="https://unpkg.com/typer-dot-js/typer.js"
@@ -25,7 +25,7 @@
                     <a class="tag" href="https://github.com/leonm-cloud">
                         <img src="/icons/github.svg" width=50 height=50>
                     </a>
-                    <a class="tag" href="https://discord.id/?prefill=1082075540644692082">
+                    <a class="tag" href="https://discord.com/users/979797311792222208">
                         <img src="/icons/discord.svg" width=50 height=50>
                     </a>
                 </div>
