--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="desc">
                     I work on
-                    <span class="typer" id="main" data-words="too many projects,minecraft plugins,websites,backend development,frontend development" data-colors="#0b79d7" data-delay="50" data-deleteDelay="1000"></span><span class="cursor" data-owner="main" data-cursor-display="|"></span>
+                    <span class="typer" id="main" data-words="too many projects,minecraft plugins,websites,backend development,frontend development" data-colors="#0b79d7,#0b79d7,#0b79d7,#0b79d7,#0b79d7," data-delay="50" data-deleteDelay="1000"></span><span class="cursor" data-owner="main" data-cursor-display="|"></span>
                     <script
                         async
                         src="https://unpkg.com/typer-dot-js/typer.js"
