--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="container">
             <div class="center">
-                <div class="title">
+                <div class="h4">
                     qezy.xyz
                 </div>
                 <div class="desc">
