--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="tags">
                     <a class="tag" href="https://github.com/leonm-cloud">
-                        <img src="/icons/github.svg" width=50 height=50>
+                        <img src="/icons/docs.svg" width=50 height=50>
                     </a>
                     <a class="tag" href="https://discord.com/users/979797311792222208">
                         <img src="/icons/discord.svg" width=50 height=50>
