--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     ></script>
                 </div>
                 <div class="tags">
-                    <a class="tag" href="https://docs.google.com/document/d/1fNJ39f4dbWEXGNt5KlBP-U6YJ5BdrlAs-xEo6vIYOxk/edit?usp=sharing">
-                        <img src="/icons/docs.svg" width=50 height=50>
+                    <a class="tag" href="https://github.com/QezyMC">
+                        <img src="/icons/github.svg" width=50 height=50>
                     </a>
                     <a class="tag" href="https://discord.com/users/979797311792222208">
                         <img src="/icons/discord.svg" width=50 height=50>
