--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>qezy.xyz</title>
+        
+        <title>Qezy's</title>
         <meta name="theme-color" content="#0b79d7"/>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Telex&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/style.css">
+
+# <------ Embed ------>
+        <meta name="title" content="🚀 Qezy's Portfolio" />
+        <meta name="description" content="My personal portfolio that includes my about me, as well as my contact information." /
+        <meta name="Resource-type" content="Document" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="theme-color" content="#636dde">
+
     </head>
     <body>
         <div class="container">
