--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
         <link href="https://fonts.googleapis.com/css2?family=Telex&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/style.css">
 
-# <------ Embed ------>
-        <meta name="title" content="🚀 Qezy's Portfolio" />
-        <meta name="description" content="My personal portfolio that includes my about me, as well as my contact information." /
-        <meta name="Resource-type" content="Document" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="theme-color" content="#636dde">
+    <!-- Description -->
+    <meta name="title" content="🚀 Qezy's Portfolio" />
+    <meta name="description" content="My personal portfolio that includes my about me, as well as my contact information." />
+    <meta name="Resource-type" content="Document" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#636dde">
+
+    <!-- Open Graph data -->
+    <meta property="og:site_name" content="⚙️ Personal Portfolio & Experience List" />
+    <meta property="og:title" content="🚀 Qezy's Portfolio" />
+    <meta property="og:description" content="My personal portfolio that includes my about me, as well as my contact information." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://qezy.xyz" />
 
     </head>
     <body>
