--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         
-        <title>Qezy's</title>
+        <title>Qezy's Portfolio</title>
         <meta name="theme-color" content="#0b79d7"/>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Telex&display=swap" rel="stylesheet">
