--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         
-        <title>Qezy's Portfolio</title>
+        <title>Qezy's Website</title>
         <meta name="theme-color" content="#0b79d7"/>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Telex&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
     <meta name="description" content="My personal portfolio that includes my about me, as well as my contact information." />
     <meta name="Resource-type" content="Document" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#636dde">
+    <meta name="theme-color" content="#00c9ff">
 
     <!-- Open Graph data -->
     <meta property="og:site_name" content="⚙️ Personal Portfolio & Experience List" />
