--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         
         <title>Qezy's Website</title>
-        <meta name="theme-color" content="#0b79d7"/>
+        <meta name="theme-color" content="#00c9ff"/>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Telex&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/style.css">
